builds/tests/348/data/attachments/ccd00f77fcc8875e.txt
2026-06-20 09:39:25,952 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-20 09:39:25,952 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,953 INFO     yoyo.migrations —  - applying step 1
2026-06-20 09:39:25,953 INFO     yoyo.migrations —  - applying step 2
2026-06-20 09:39:25,953 INFO     yoyo.migrations —  - applying step 3
2026-06-20 09:39:25,953 INFO     yoyo.migrations —  - applying step 4
2026-06-20 09:39:25,954 INFO     yoyo.migrations —  - applying step 5
2026-06-20 09:39:25,954 INFO     yoyo.migrations —  - applying step 6
2026-06-20 09:39:25,954 INFO     yoyo.migrations —  - applying step 7
2026-06-20 09:39:25,954 INFO     yoyo.migrations —  - applying step 8
2026-06-20 09:39:25,954 INFO     yoyo.migrations —  - applying step 9
2026-06-20 09:39:25,955 INFO     yoyo.migrations —  - applying step 10
2026-06-20 09:39:25,955 INFO     yoyo.migrations —  - applying step 11
2026-06-20 09:39:25,955 INFO     yoyo.migrations —  - applying step 12
2026-06-20 09:39:25,955 INFO     yoyo.migrations —  - applying step 13
2026-06-20 09:39:25,956 INFO     yoyo.migrations —  - applying step 14
2026-06-20 09:39:25,957 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-20 09:39:25,958 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-20 09:39:25,959 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,959 INFO     yoyo.migrations —  - applying step 1
2026-06-20 09:39:25,960 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-20 09:39:25,961 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-20 09:39:25,961 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,963 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-20 09:39:25,964 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-20 09:39:25,964 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,964 INFO     yoyo.migrations —  - applying step 1
2026-06-20 09:39:25,965 INFO     yoyo.migrations —  - applying step 2
2026-06-20 09:39:25,965 INFO     yoyo.migrations —  - applying step 3
2026-06-20 09:39:25,965 INFO     yoyo.migrations —  - applying step 4
2026-06-20 09:39:25,965 INFO     yoyo.migrations —  - applying step 5
2026-06-20 09:39:25,966 INFO     yoyo.migrations —  - applying step 6
2026-06-20 09:39:25,966 INFO     yoyo.migrations —  - applying step 7
2026-06-20 09:39:25,966 INFO     yoyo.migrations —  - applying step 8
2026-06-20 09:39:25,966 INFO     yoyo.migrations —  - applying step 9
2026-06-20 09:39:25,967 INFO     yoyo.migrations —  - applying step 10
2026-06-20 09:39:25,967 INFO     yoyo.migrations —  - applying step 11
2026-06-20 09:39:25,967 INFO     yoyo.migrations —  - applying step 12
2026-06-20 09:39:25,968 INFO     yoyo.migrations —  - applying step 13
2026-06-20 09:39:25,968 INFO     yoyo.migrations —  - applying step 14
2026-06-20 09:39:25,968 INFO     yoyo.migrations —  - applying step 15
2026-06-20 09:39:25,969 INFO     yoyo.migrations —  - applying step 16
2026-06-20 09:39:25,969 INFO     yoyo.migrations —  - applying step 17
2026-06-20 09:39:25,969 INFO     yoyo.migrations —  - applying step 18
2026-06-20 09:39:25,970 INFO     yoyo.migrations —  - applying step 19
2026-06-20 09:39:25,970 INFO     yoyo.migrations —  - applying step 20
2026-06-20 09:39:25,970 INFO     yoyo.migrations —  - applying step 21
2026-06-20 09:39:25,970 INFO     yoyo.migrations —  - applying step 22
2026-06-20 09:39:25,972 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-20 09:39:25,973 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-20 09:39:25,973 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,974 INFO     yoyo.migrations —  - applying step 1
2026-06-20 09:39:25,974 INFO     yoyo.migrations —  - applying step 2
2026-06-20 09:39:25,974 INFO     yoyo.migrations —  - applying step 3
2026-06-20 09:39:25,975 INFO     yoyo.migrations —  - applying step 4
2026-06-20 09:39:25,975 INFO     yoyo.migrations —  - applying step 5
2026-06-20 09:39:25,976 INFO     yoyo.migrations —  - applying step 6
2026-06-20 09:39:25,976 INFO     yoyo.migrations —  - applying step 7
2026-06-20 09:39:25,976 INFO     yoyo.migrations —  - applying step 8
2026-06-20 09:39:25,976 INFO     yoyo.migrations —  - applying step 9
2026-06-20 09:39:25,976 INFO     yoyo.migrations —  - applying step 10
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 11
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 12
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 13
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 14
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 15
2026-06-20 09:39:25,977 INFO     yoyo.migrations —  - applying step 16
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 17
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 18
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 19
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 20
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 21
2026-06-20 09:39:25,978 INFO     yoyo.migrations —  - applying step 22
2026-06-20 09:39:25,979 INFO     yoyo.migrations —  - applying step 23
2026-06-20 09:39:25,979 INFO     yoyo.migrations —  - applying step 24
2026-06-20 09:39:25,979 INFO     yoyo.migrations —  - applying step 25
2026-06-20 09:39:25,979 INFO     yoyo.migrations —  - applying step 26
2026-06-20 09:39:25,979 INFO     yoyo.migrations —  - applying step 27
2026-06-20 09:39:25,980 INFO     yoyo.migrations —  - applying step 28
2026-06-20 09:39:25,980 INFO     yoyo.migrations —  - applying step 29
2026-06-20 09:39:25,980 INFO     yoyo.migrations —  - applying step 30
2026-06-20 09:39:25,980 INFO     yoyo.migrations —  - applying step 31
2026-06-20 09:39:25,980 INFO     yoyo.migrations —  - applying step 32
2026-06-20 09:39:25,981 INFO     yoyo.migrations —  - applying step 33
2026-06-20 09:39:25,981 INFO     yoyo.migrations —  - applying step 34
2026-06-20 09:39:25,983 INFO     yoyo.migrations —  - applying step 35
2026-06-20 09:39:25,983 INFO     yoyo.migrations —  - applying step 36
2026-06-20 09:39:25,984 INFO     yoyo.migrations —  - applying step 37
2026-06-20 09:39:25,984 INFO     yoyo.migrations —  - applying step 38
2026-06-20 09:39:25,985 INFO     yoyo.migrations —  - applying step 39
2026-06-20 09:39:25,987 INFO     yoyo.migrations —  - applying step 40
2026-06-20 09:39:25,989 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-20 09:39:25,989 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-20 09:39:25,990 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,994 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-20 09:39:25,995 INFO     yoyo.migrations — Applying 0007_drop_legacy_llmbroker
2026-06-20 09:39:25,996 INFO     yoyo.migrations —  - applying step 0
2026-06-20 09:39:25,996 INFO     yoyo.migrations —  - applying step 1
2026-06-20 09:39:25,997 INFO     yoyo.migrations — Marking 0007_drop_legacy_llmbroker applied
2026-06-20 09:39:26,003 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-20 09:39:26,005 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 541, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
